2010-12-15  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/AnalyseProcessor.java: Die Funktion
	  process() gibt bei erfolgreichem Persistieren nun True zurück, falls das
	  Persistieren fehlgeschlagen ist, wird False zurückgeliefert.

	* src/de/bielefeld/umweltamt/aui/module/AnalyseImport.java: Nach dem
	  Importieren der Daten (speichern in die Datenbank) wird ein Dialog
	  geöffnet, das den Nutzer über die Anzahl der erfolgreich importierten
	  Zeilen der Analyseergebnisse informiert.

2010-12-15  Ingo Weinzierl <ingo@intevation.de>

	* build.xml: Neues Target zum Compilieren von JasperReports Templates. Die
	  Targets `compile` und `run` hängen von diesem ab, damit die Templates
	  nicht während der Lauftzeit übersetzt werden müssen.

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Die Knöpfe zum Drucken eines Probenahmeauftrags und Gebührenbescheids
	  triggern nun den PDFExporter an, der entsprechende PDFs erzeugt.

	* src/de/bielefeld/umweltamt/aui/utils/PDFExporter.java: Ein PDF Generator
	  für Probenahmeaufträge und Gebührenbescheide. Bisher ist nur die Funktion
	  zum Erstellen eines Probenahmeauftrag-PDFs implementiert. Die eigentliche
	  Erstellung der PDFs wird von JasperReports durchgeführt.

	* reports/probenahmeauftrag.jrxml: Das JasperReports Template, welches zum
	  Erstellen von Probenahmenauftrag-PDFs benutzt wird.

	* src/de/bielefeld/umweltamt/aui/utils/JRMapDataSource.java: Dies ist eine
	  Datenquelle für JasperReports. Bei der Erstellung eines solchen Objekts
	  wird eine java.util.Map übergeben, in der die einzufüllenden Felder des
	  Templates enthalten sind.

	* src/de/bielefeld/umweltamt/aui/mappings/basis/BasisBetreiber.java: Eine
	  neue Funktion implementiert, die die Adresse des Betreibers als String
	  ausgibt.

	* lib/jasperreports-3.7.6.jar,
	  lib/commons-digester-1.7.jar,
	  lib/iText-2.1.7.jar,